--- a/src/app/features/feature-portfolio/components/page-heading/page-heading.component.scss
+++ b/src/app/features/feature-portfolio/components/page-heading/page-heading.component.scss
@@ -52,3 +52,64 @@
         margin-bottom: 30px;
     }
 }
+
+
+@media screen and (max-width: 767px) {
+
+    .background {
+         rotate: 180deg;
+    
+        .rectangle {
+            width: calc(100vh / 4);
+            height: calc(100vh / 4);
+        }
+    }
+ 
+    .header {
+        top: 15vh;
+        padding-left: 20px;
+    
+        .name {
+            h1 {
+                font-size: 24px;
+
+            }
+        }
+    
+        h2 {
+            font-size: 60px;
+            line-height: 70px;
+            width: 80%;
+        }
+    }
+}
+
+@media screen and (max-width: 376px) {
+
+    .background {
+         rotate: 180deg;
+    
+        .rectangle {
+            width: calc(100vh / 4);
+            height: calc(100vh / 4);
+        }
+    }
+ 
+    .header {
+        top: 20vh;
+        padding-left: 20px;
+    
+        .name {
+            h1 {
+                font-size: 24px;
+
+            }
+        }
+    
+        h2 {
+            font-size: 48px;
+            line-height: 60px;
+            width: 80%;
+        }
+    }
+}
