--- a/src/app/features/feature-portfolio/components/about/about-me-section/about-me-section.component.html
+++ b/src/app/features/feature-portfolio/components/about/about-me-section/about-me-section.component.html
@@ -4,35 +4,19 @@
 
   <div class="content-container">
      <div class="photo-content">
-
+        <img src="assets/images/blog-1.jpg"> 
      </div>
 
      <div class="description">
         <h4>HI, I AM VASILE BADRAGAN A SOFTWARE ENGINEER</h4>
-        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-          when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-          when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <p>Which means I apply engineering principles to design, develop, test, and maintain software applications. 
+          My day-to-day work involves translating user needs into technical specifications, writing code, and troubleshooting any errors that arise.  
+          I also keep myself updated on the latest advancements and trends in software development to stay on top of the ever-changing tech landscape.</p>
 
         <div class="domain-skill">
-          <div class="domain-skill-item">
-            <mat-icon svgIcon="programmer-laptop">data</mat-icon>
-            <h4>Interaction Design</h4>
-          </div>
-
-          <div class="domain-skill-item">
-            <mat-icon svgIcon="programmer-laptop">data</mat-icon>
-            <h4>Interaction Design</h4>
-          </div>
-
-          <div class="domain-skill-item">
-            <mat-icon svgIcon="programmer-laptop">data</mat-icon>
-            <h4>Interaction Design</h4>
-          </div>
-
-          <div class="domain-skill-item">
-            <mat-icon svgIcon="programmer-laptop">data</mat-icon>
-            <h4>Interaction Design</h4>
+          <div class="domain-skill-item" *ngFor="let skill of skills">
+            <mat-icon svgIcon="programmer-laptop"></mat-icon>
+            <h4>{{ skill }}</h4>
           </div>
         </div>
      </div>
