--- a/src/app/features/feature-portfolio/pages/service-page/service-page.component.html
+++ b/src/app/features/feature-portfolio/pages/service-page/service-page.component.html
@@ -9,7 +9,7 @@
 
   <div class="expertise-area">
     <div class="expertise-area-item expertise-area-item-photo">
-      
+      <img src="assets/images/frontend-service.jpg">
     </div>
 
     <div class="expertise-area-item">
@@ -18,26 +18,26 @@
         <mat-icon svgIcon="programmer-laptop">data</mat-icon>
       </div>
       <h1>Frontend Development</h1>
-      <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+      <p>Bringing websites and applications to life through front-end development</p>
 
       <div class="work-process-tools-dividion">
         <div class="work-process">
            <h3>Work Process</h3>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Requirements</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Analisys</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Designing</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Implementation</p>
            </div>
         </div>
 
@@ -45,19 +45,19 @@
           <h3>Tools</h3>
           <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Angular</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>TypeScript</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Kendo</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Figma</p>
            </div>
         </div>
       </div>
@@ -67,30 +67,30 @@
     <div class="expertise-area-item">
       <div class="item-count">
         <h1>02</h1>
-        <mat-icon svgIcon="programmer-laptop">data</mat-icon>
+        <mat-icon svgIcon="programmer-laptop"></mat-icon>
       </div>
       <h1>Backend Development</h1>
       <div class="line"></div>
-      <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+      <p>I build the behind-the-scenes logic for web applications, ensuring smooth data flow and functionality</p>
 
       <div class="work-process-tools-dividion">
         <div class="work-process">
            <h3>Work Process</h3>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Requirements</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Analisys</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Architecting</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Coding</p>
            </div>
         </div>
 
@@ -98,59 +98,59 @@
           <h3>Tools</h3>
           <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>.NET</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>C#</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>EntityFramework</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>SQL Server</p>
            </div>
         </div>
       </div>
     </div>
 
     <div class="expertise-area-item expertise-area-item-photo">
-      
+      <img src="assets/images/backend-service.jpg">
     </div>
 
     <div class="expertise-area-item expertise-area-item-photo">
-      
+      <img src="assets/images/mobile-service.jpg">
     </div>
 
     <div class="expertise-area-item">
       <div class="item-count">
         <h1>03</h1>
-        <mat-icon svgIcon="programmer-laptop">data</mat-icon>
+        <mat-icon svgIcon="programmer-laptop"></mat-icon>
       </div>
       <h1>Mobile Development</h1>
       <div class="line"></div>
-      <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+      <p>Crafting software applications specifically designed for smartphones and tablets</p>
 
       <div class="work-process-tools-dividion">
         <div class="work-process">
            <h3>Work Process</h3>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Requirement</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Analisys</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Designing</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Development</p>
            </div>
         </div>
 
@@ -158,19 +158,19 @@
           <h3>Tools</h3>
           <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Flutter</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Xamarin</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Kendo</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>TypeScript/p>
            </div>
         </div>
       </div>
@@ -184,26 +184,26 @@
       </div>
       <h1>CI/CD</h1>
       <div class="line"></div>
-      <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+      <p>Automates building, testing, and deploying code for frequent, reliable releases</p>
 
       <div class="work-process-tools-dividion">
         <div class="work-process">
            <h3>Work Process</h3>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Requirements</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Analisys</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Architecting</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Implementation</p>
            </div>
         </div>
 
@@ -211,25 +211,25 @@
           <h3>Tools</h3>
           <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Jenkins</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Docker</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Kubernetes</p>
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>Makeup</p>
+            <p>Azure DevOps</p>
            </div>
         </div>
       </div>
     </div>
     <div class="expertise-area-item expertise-area-item-photo">
-      
+      <img src="assets/images/cicd-service.jpg">
     </div>
   </div>
 </div>
