--- a/src/app/features/feature-portfolio/components/about/about-me-section/about-me-section.component.scss
+++ b/src/app/features/feature-portfolio/components/about/about-me-section/about-me-section.component.scss
@@ -1,5 +1,4 @@
 .about-container {
-  height: 160vh;
   background-color: var(--background);
   padding: 200px 100px;
   text-align: center;
@@ -19,27 +18,33 @@
 
   .content-container {
     display: flex;
-    gap: 150px;
+    gap: 100px;
 
     .photo-content{
-        min-width: 380px;
-        width: 380px;
-        height: 475px;
+      min-width: 320px;;
+        width: 330px;
+        height: 415px;
         background-color: var(--white);
+
+        img{
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
     }
 
     .description{
         text-align: left;
       
         h4{
-           font-size: 24px;
+           font-size: 20px;
            font-weight: 400;
            color: var(--cream-500);
            margin-bottom: 20px;
         }
 
         p{
-            font-size: 18px;
+            font-size: 16px;
             line-height: 25px;
             font-weight: 200;
             color: var(--white);
@@ -54,26 +59,146 @@
 
             .domain-skill-item{
                display: flex;
-               width: 304px;
-               height: 136px;
+               //width: 304px;
+               height: 116px;
                background-color: var(--dark-grey-500);
-               padding: 30px;
+               padding: 20px;
 
                mat-icon{
-                height: 45px;
-                width: 75px;
+                height: 40px;
+                width: 70px;
                 color: var(--cream-500);
                 margin-right: 30px;
                 margin-top: 10px;
                }
 
                h4{
-                font-size: 24px;
+                font-size: 20px;
                 color: var(--cream-500);;
                 line-height: 35px;
                }
             }
         }
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .about-container {
+    padding: 50px 20px;
+
+    h3 {
+      font-size: 24px;
+      margin-bottom: 40px;
+    }
+  
+    h1 {
+      font-size: 48px;
+      margin-bottom: 40px;
+    }
+  
+    .content-container {
+      display: block;
+      gap: 40px;
+  
+      .photo-content{
+          min-width: 52.5%;
+          width: 100%;
+          height: 375px;
+          background-color: var(--white);
+      }
+  
+      .description{
+          text-align: left;
+        
+          h4{
+             font-size: 22px;
+             margin-top: 40px;
+             margin-bottom: 20px;
+          }
+  
+          p{
+              font-size: 16px;
+              line-height: 20px;
+          }
+  
+          .domain-skill{
+              display: grid;
+              row-gap: 20px;
+              column-gap: 0px;
+              grid-template-columns: 1fr;
+              margin-top: 40px;
+  
+              .domain-skill-item{
+                 display: block;
+                 width: 100%;
+                 height: 100%;
+                 padding: 20px;
+  
+                 mat-icon{
+                  height: 45px;
+                  width: 75px;
+                  color: var(--cream-500);
+                  margin-right: 30px;
+                  margin-top: 10px;
+                 }
+  
+                 h4{
+                  font-size: 24px;
+                  color: var(--cream-500);;
+                  line-height: 35px;
+                 }
+              }
+          }
+      }
+    }
+  }
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1048px) {
+  .about-container {
+  
+    .content-container {
+      display: block;
+      gap: 40px;
+  
+   
+  
+      .description{
+          text-align: left;
+    
+  
+          .domain-skill{
+              display: block;
+              row-gap: 20px;
+              column-gap: 0px;
+              grid-template-columns: 1fr;
+              margin-top: 40px;
+  
+              .domain-skill-item{
+                 display: flex;
+                 width: 100%;
+                 height: 100%;
+                 padding: 20px;
+                 margin-top: 20px;
+  
+                 mat-icon{
+                  height: 45px;
+                  width: 75px;
+                  color: var(--cream-500);
+                  margin-right: 30px;
+                  margin-top: 10px;
+                 }
+  
+                 h4{
+                  font-size: 24px;
+                  color: var(--cream-500);;
+                  line-height: 35px;
+                 }
+              }
+          }
+      }
     }
   }
 }
