--- a/src/app/features/feature-portfolio/components/about/experience-section/experience-section.component.html
+++ b/src/app/features/feature-portfolio/components/about/experience-section/experience-section.component.html
@@ -2,29 +2,18 @@
   <div class="description">
     <h3>EXPERIENCE</h3>
     <h1>Discover My Experience</h1>
-    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-      when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+    <p>Software Engineer with years of experience designing, developing, and testing software solutions. 
+      Proven ability in .NET, Angular to deliver high-quality applications that meet user needs.</p>
   </div>
 
-  <div class="vertical-timeline">
-
-  </div>
-
+ <div class="timeline-container">
+  <hr>
   <div class="timeline">
-    <div class="timeline-item">
-       <h4>Junior UI/UX Designer</h4>
-       <p>2022 - 2023</p>
-       <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+    <div class="timeline-item" *ngFor="let experience of experiences">
+       <h4>{{ experience.title }}</h4>
+       <p>{{ experience.period }}</p>
+       <p>{{ experience.description }}</p>
     </div>
-    <div class="timeline-item">
-      <h4>Junior UI/UX Designer</h4>
-      <p>2022 - 2023</p>
-      <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-   </div>
-   <div class="timeline-item">
-    <h4>Junior UI/UX Designer</h4>
-    <p>2022 - 2023</p>
-    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
- </div>
   </div>
+ </div>
 </div>
