--- a/src/app/features/feature-portfolio/components/about/experience-section/experience-section.component.scss
+++ b/src/app/features/feature-portfolio/components/about/experience-section/experience-section.component.scss
@@ -8,6 +8,7 @@
   .description {
     width: 40%;
     padding-top: 200px;
+    z-index: 1;
     h3 {
       font-size: 35px;
       font-weight: 400;
@@ -30,40 +31,118 @@
     }
   }
 
-  .vertical-timeline{
-    //width: 2px;
-    border-left: 6p solid white;
-    border-style: dashed;
-    background-color: red;
-    height: 200px;
-  }
+  .timeline-container{
+    display: flex;
+    //justify-content: space-between;
+    width: 55%;
 
-  .timeline{
-    display: grid;
-     width: 40%;
-     gap: 30px;
+    hr{
+      border: 1px dashed var(--white);
+    }
 
-    .timeline-item{
-background-color: var(--background);
-padding: 70px;
-
-       h4{
-        font-size: 24px;
-        font-weight: 400;
-        color: var(--cream-500);
-        margin-bottom: 10px;
-       }
-
-       p{
-        font-size: 18px;
-        line-height: 25px;
-        font-weight: 200;
-        color: var(--white);
-       }
-
-       p + p{
-        margin-top: 20px;
-       }
+    .timeline{
+       display: grid;
+       width: 90%;
+       gap: 30px;
+       margin-left: 20px;
+  
+      .timeline-item{
+         background-color: var(--background);
+         padding: 70px;
+  
+         h4{
+          font-size: 24px;
+          font-weight: 400;
+          color: var(--cream-500);
+          margin-bottom: 10px;
+         }
+  
+         p{
+          font-size: 18px;
+          line-height: 25px;
+          font-weight: 200;
+          color: var(--white);
+         }
+  
+         p + p{
+          margin-top: 20px;
+         }
+      }
     }
   }
+}
+
+
+@media screen and (max-width: 767px) {
+   .experience-container {
+    display: block;
+
+  height: 120;
+  padding: 50px 20px;
+
+  .description {
+    width: 100%;
+    padding-top: 0px;
+
+    h3 {
+      font-size: 24px;
+      font-weight: 400;
+      color: var(--cream-500);
+      margin-bottom: 40px;
+    }
+
+    h1 {
+      font-size: 48px;
+      color: var(--white);
+      margin-bottom: 50px;
+      line-height: 60px;
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 25px;
+      font-weight: 200;
+      color: var(--white);
+    }
+  }
+
+  .timeline-container{
+    display: flex;
+    margin-top: 40px;
+    width: 100%;
+
+    hr{
+      border: 1px dashed var(--white);
+    }
+    .timeline{
+      display: grid;
+       width: 90%;
+       gap: 30px;
+  
+      .timeline-item{
+        background-color: var(--background);
+        padding: 20px;
+  
+         h4{
+          font-size: 24px;
+          font-weight: 400;
+          color: var(--cream-500);
+          margin-bottom: 10px;
+         }
+  
+         p{
+          font-size: 18px;
+          line-height: 20px;
+          font-weight: 200;
+          color: var(--white);
+         }
+  
+         p + p{
+          margin-top: 20px;
+         }
+      }
+    }
+
+  }
+}
 }
