--- a/src/app/features/feature-portfolio/components/about/partner-section/partner-section.component.scss
+++ b/src/app/features/feature-portfolio/components/about/partner-section/partner-section.component.scss
@@ -19,3 +19,53 @@
         }
     }
 }
+
+@media screen and (max-width: 767px) {
+    .partner{
+        display: block;
+        padding: 50px 20px;
+        text-align: center;
+    
+        h1{
+            font-size: 48px;
+            color: var(--white);
+        }
+    
+        .partner-logo{
+            width: 100%;
+            display: block;
+            margin-top: 40px;
+            text-align: center;
+    
+            mat-icon{
+                width: 200px;
+                height: 80px;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 768px)  and (max-width: 1024px) {
+    .partner{
+        display: block;
+        padding: 50px 20px;
+        text-align: center;
+    
+        h1{
+            font-size: 48px;
+            color: var(--white);
+        }
+    
+        .partner-logo{
+            width: 100%;
+            display: block;
+            margin-top: 40px;
+            text-align: center;
+    
+            mat-icon{
+                width: 200px;
+                height: 80px;
+            }
+        }
+    }
+}
