--- a/src/app/features/feature-portfolio/components/about/skills-section/skills-section.component.html
+++ b/src/app/features/feature-portfolio/components/about/skills-section/skills-section.component.html
@@ -3,54 +3,10 @@
 <h1>Discover My Skills</h1>
 
 <div class="skill-level">
-  <div class="skill-level-item">
+  <div class="skill-level-item" *ngFor="let skill of skills">
     <div class="skill-title">
-     <p>.NET</p>
-     <p>95%</p>
-    </div>
-
-    <div class="progress-bar">
-      <div class="progress persantage"></div> 
-    </div>
-  </div>
-
-  <div class="skill-level-item">
-    <div class="skill-title">
-     <p>.NET</p>
-     <p>95%</p>
-    </div>
-
-    <div class="progress-bar">
-      <div class="progress persantage"></div> 
-    </div>
-  </div>
-
-  <div class="skill-level-item">
-    <div class="skill-title">
-     <p>.NET</p>
-     <p>95%</p>
-    </div>
-
-    <div class="progress-bar">
-      <div class="progress persantage"></div> 
-    </div>
-  </div>
-
-  <div class="skill-level-item">
-    <div class="skill-title">
-     <p>.NET</p>
-     <p>95%</p>
-    </div>
-
-    <div class="progress-bar">
-      <div class="progress persantage"></div> 
-    </div>
-  </div>
-
-  <div class="skill-level-item">
-    <div class="skill-title">
-     <p>.NET</p>
-     <p>95%</p>
+     <p>{{ skill.title }}</p>
+     <p skill-level="50">{{ skill.level }}</p>
     </div>
 
     <div class="progress-bar">
