--- a/src/app/features/feature-portfolio/components/about/skills-section/skills-section.component.scss
+++ b/src/app/features/feature-portfolio/components/about/skills-section/skills-section.component.scss
@@ -47,3 +47,23 @@
        }
     }
 }
+
+@media screen and (max-width: 767px) {
+    .skills{
+
+        text-align: center;
+        padding: 50px 20px;
+     
+         h3{
+             font-size: 24px;
+ 
+             margin-bottom: 40px;
+         }
+     
+         h1{
+             font-size: 48px;
+             color: var(--white);
+             margin-bottom: 60px;
+         }
+     }
+}
