Mobile responsive for contact page

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -43,6 +43,7 @@
         <button mat-menu-item [routerLink]="['/about']">ABOUT</button>
         <button mat-menu-item [routerLink]="['/portfolio']">PORTFOLIO</button>
         <button mat-menu-item [routerLink]="['/service']">SERVICE</button>
+        <button mat-menu-item [routerLink]="['/contact']">CONTACT</button>
         <button mat-menu-item [matMenuTriggerFor]="pages">PAGES</button>
       </mat-menu>
       
